<video> won't load when URL ends with .php https://bugs.webkit.org/show_bug.cgi?id=86308

Source/WebCore:

Reviewed by NOBODY (OOPS!).

Test: http/tests/media/video-query-url.html

* platform/graphics/MediaPlayer.cpp:
(WebCore::MediaPlayer::MediaPlayer): Initialize m_typeInferredFromExtension.
(WebCore::MediaPlayer::load): Set m_typeInferredFromExtension appropriately.
(WebCore::MediaPlayer::loadWithNextMediaEngine): If we don't find a media engine registered
    for a MIME type, and the type was inferred from the extension, give the first registered
    media engine a chance anwyay just as we do when there is no MIME type at all.
* platform/graphics/MediaPlayer.h: Add m_typeInferredFromExtension.

LayoutTests:

Reviewed by Darin Adler.

* http/tests/media/resources/load-video.php: Added.
* http/tests/media/video-query-url-expected.txt: Added.
* http/tests/media/video-query-url.html: Added.


Canonical link: https://commits.webkit.org/103957@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@116960 268f45cc-cd09-0410-ab3c-d52691b4dbfc